--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<canvas id="c"></canvas>
 		<div id="page">
 			<div style="height: 50vh;"></div>
-			<section id="top" class="hero is-medium" data-aos="fade-up">
+			<section id="top" class="hero is-medium" data-aos_="fade-up">
 				<div class="hero-body">
 					<p id="main-text">
 						Hello! We're <span class="inverted">CM-Tech</span>. <br />
@@ -27,7 +27,7 @@
 			<section class="hero is-fullheight">
 				<div class="container is-fluid">
 					<div class="columns">
-						<div data-aos="fade-right" class="column is-half has-text-left">
+						<div data-aos_="fade-right" class="column is-half has-text-left">
 							<h1 class="gold">Milo</h1>
 							<p class="top-tagline">
 								I'm a student that likes to code fun simulations of the world around me with bleeding edge tech.
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 					<div class="columns">
-						<div data-aos="fade-left" class="column is-half is-offset-half has-text-right">
+						<div data-aos_="fade-left" class="column is-half is-offset-half has-text-right">
 							<h1 class="gold cole-text">Cole</h1>
 							<p class="top-tagline">
 								I have an appreciation for people, learning, and work with passion.
