--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 	<body>
 		<canvas id="c"></canvas>
 		<div id="page">
-			<div style="height: 50vh;"></div>
-			<section id="top" class="hero is-medium" data-aos_="fade-up">
-				<div class="hero-body">
-					<p id="main-text">
-						Hello! We're <span class="inverted">CM-Tech</span>. <br />
-						We are programmers and mathematicians who create efficient and beautiful front end projects.
-					</p>
+			<div style="height: 30vh;"></div>
+			<section id="top" class="section is-medium" data-aos="fade-up">
+				<div class="columns is-centered">
+					<div class="column is-narrow">
+						<p id="main-text">
+							Hello! We're CM-Tech. <br />
+							We are programmers <br />and mathematicians <br />who create efficient <br />and beautiful<br />
+							front-end projects.
+						</p>
+					</div>
 				</div>
 			</section>
 
@@ -30,7 +33,7 @@
 						<div data-aos_="fade-right" class="column is-half has-text-left">
 							<h1 class="gold">Milo</h1>
 							<p class="top-tagline">
-								I'm a student that likes to code fun simulations of the world around me with bleeding edge tech.
+								I'm a student who likes to code fun simulations of the world around me with bleeding edge tech.
 							</p>
 						</div>
 					</div>
