--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<canvas id="c"></canvas>
 		<div id="page">
-			<div style="height: 30vh;"></div>
+			<div style="height: 31.2vh;"></div>
 			<section id="top" class="section is-medium" data-aos="fade-up">
 				<div class="columns is-centered">
 					<div class="column is-narrow">
@@ -27,9 +27,10 @@
 				</div>
 			</section>
 
-			<section class="hero is-fullheight">
+			<section class="hero">
 				<div class="container is-fluid">
 					<div class="columns">
+						<span id="breakpoint1"></span>
 						<div data-aos_="fade-right" class="column is-half has-text-left">
 							<h1 class="gold">Milo</h1>
 							<p class="top-tagline">
@@ -38,16 +39,19 @@
 						</div>
 					</div>
 					<div class="columns">
+						<span id="breakpoint2"></span>
 						<div data-aos_="fade-left" class="column is-half is-offset-half has-text-right">
 							<h1 class="gold cole-text">Cole</h1>
 							<p class="top-tagline">
 								I have an appreciation for people, learning, and work with passion.
 							</p>
 						</div>
+						
 					</div>
 				</div>
 			</section>
-
+			<span id="breakpoint3"></span>
+			<section class="hero is-fullheight">
 			<div class="container">
 				<div class="columns">
 					<div class="column">
@@ -74,6 +78,7 @@
 					</div>
 				</div>
 			</div>
+			</section>
 		</div>
 		<script src="js/index.js"></script>
 	</body>
