Spicy color slant

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 							</p>
 						</div>
 					</div>
-					<div class="columns">
+					<div class="columns" style="margin-top:-10vw">
 						<span id="breakpoint2"></span>
 						<div data-aos_="fade-left" class="column is-half is-offset-half has-text-right">
 							<h1 class="gold cole-text">Cole</h1>
 							<p class="top-tagline">
-								I have an appreciation for people, learning, and work with passion.
+								I have an appreciation for people, learning, and work with passion. <br/>Math is cool.
 							</p>
 						</div>
 						
