Remove Page Tex linear scale and better top blurb

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no" />
 		<title>CM-Tech</title>
 		<link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css" />
 		<link rel="stylesheet" href="sass/style.scss" />
@@ -16,13 +16,14 @@
 		<div id="page">
 			<section class="hero is-fullheight aos-init aos-animate has-text-centered"  data-aos="fade-up">
 				<div class="hero-body">
-				  <div class="container">
-					<h1 class="title">
-						Hello! We're CM-Tech.
-					</h1>
+				  <div class="container top-container">
+					<!-- <h1 class="title top-title">
+						CM-Tech
+					</h1> -->
 					<h2 class="subtitle">
-						We are programmers <br />and mathematicians <br />who create efficient <br />and beautiful<br />
-						front-end projects.
+						<img src="img/blurb.svg" class="blurb-img"/>
+						<!-- We are programmers <br />and mathematicians <br />who create efficient <br />and beautiful<br />
+						front-end projects. -->
 					</h2>
 				  </div>
 				</div>
