--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="column">
               <span id="breakpoint2"></span>
               <div data-aos="fade-left" class="has-text-right">
-                <h1 class="gold cole-text is-size-1">Cole</h1>
-                <p class="top-tagline is-size-3">I have an appreciation for people, learning, and work with passion. <br />Math is cool.</p>
+                <h1 class="gold cole-text is-size-1">Cyris</h1>
+                <p class="top-tagline is-size-3">Code Choreographer finding simplicity in complex systems.</p>
               </div>
             </div>
           </div>
